Backend: Added more business logic for reservations.
